--- a/files/settings.json
+++ b/files/settings.json
@@ -1,146 +1,227 @@
 {
-  "[dart]": {
+    "[dart]": {
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "editor.rulers": [
+            80
+        ],
+        "editor.selectionHighlight": false,
+        "editor.suggest.snippetsPreventQuickSuggestions": false,
+        "editor.suggestSelection": "first",
+        "editor.tabCompletion": "onlySnippets",
+        "editor.wordBasedSuggestions": false
+    },
+    "terminal.integrated.defaultProfile.linux": "bash",
+    "editor.lineNumbers": "relative",
     "editor.formatOnSave": true,
-    "editor.formatOnType": true,
-    "editor.rulers": [80],
-    "editor.selectionHighlight": false,
-    "editor.suggest.snippetsPreventQuickSuggestions": false,
-    "editor.suggestSelection": "first",
-    "editor.tabCompletion": "onlySnippets",
-    "editor.wordBasedSuggestions": false
-  },
-
-  "terminal.integrated.defaultProfile.linux": "bash",
-
-  "editor.lineNumbers": "relative",
-  "editor.formatOnSave": true,
-
-  "[javascriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[scss]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-
-  //vim
-  "vim.easymotion": true,
-  "vim.incsearch": true,
-  "vim.hlsearch": true,
-  "vim.insertModeKeyBindings": [
-    {
-      "before": ["j", "k"],
-      "after": ["<Esc>"]
-    }
-  ],
-  "vim.normalModeKeyBindingsNonRecursive": [
-    // editing
-    {
-      "before": ["<leader>", "w"],
-      "commands": ["workbench.action.files.save"]
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "before": ["<leader>", "f"],
-      "commands": ["editor.toggleFold"]
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "before": ["<leader>", "q"],
-      "commands": ["workbench.action.closeActiveEditor"]
+    "[html]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "before": ["<leader>", "v"],
-      "commands": ["workbench.action.splitEditor"]
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "before": ["<leader>", "ff"],
-      "commands": ["search.action.openNewEditor"]
+    "[scss]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    // navigation
-    {
-      "before": ["<C-[>"],
-      "commands": ["editor.action.marker.prevInFiles"]
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "before": ["<C-]>"],
-      "commands": ["editor.action.marker.next"]
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "before": ["<leader>", "/"],
-      "commands": [":noh"]
+    //vim
+    "vim.easymotion": true,
+    "vim.incsearch": true,
+    "vim.hlsearch": true,
+    "vim.insertModeKeyBindings": [
+        {
+            "before": [
+                "j",
+                "k"
+            ],
+            "after": [
+                "<Esc>"
+            ]
+        }
+    ],
+    "vim.normalModeKeyBindingsNonRecursive": [
+        // editing
+        {
+            "before": [
+                "<leader>",
+                "w"
+            ],
+            "commands": [
+                "workbench.action.files.save"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "f"
+            ],
+            "commands": [
+                "editor.toggleFold"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "q"
+            ],
+            "commands": [
+                "workbench.action.closeActiveEditor"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "v"
+            ],
+            "commands": [
+                "workbench.action.splitEditor"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "ff"
+            ],
+            "commands": [
+                "search.action.openNewEditor"
+            ]
+        },
+        // navigation
+        {
+            "before": [
+                "<C-[>"
+            ],
+            "commands": [
+                "editor.action.marker.prevInFiles"
+            ]
+        },
+        {
+            "before": [
+                "<C-]>"
+            ],
+            "commands": [
+                "editor.action.marker.next"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "/"
+            ],
+            "commands": [
+                ":noh"
+            ]
+        },
+        {
+            "before": [
+                "<C-h>"
+            ],
+            "commands": [
+                "workbench.action.previousEditor"
+            ]
+        },
+        {
+            "before": [
+                "<C-l>"
+            ],
+            "commands": [
+                "workbench.action.nextEditor"
+            ]
+        },
+        // controls
+        {
+            "before": [
+                "<leader>",
+                "qq"
+            ],
+            "commands": [
+                "workbench.action.closeAllGroups"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "n"
+            ],
+            "commands": [
+                "workbench.view.explorer"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "s"
+            ],
+            "commands": [
+                "workbench.action.toggleSidebarVisibility"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "g"
+            ],
+            "commands": [
+                "workbench.view.scm"
+            ]
+        },
+        {
+            "before": [
+                "g",
+                "d"
+            ],
+            "commands": [
+                "editor.action.revealDefinition"
+            ]
+        },
+        {
+            "before": [
+                "<C-q>"
+            ],
+            "commands": [
+                "workbench.action.closeAllEditors"
+            ]
+        },
+        {
+            "before": [
+                "<leader>",
+                "c",
+                "c"
+            ],
+            "commands": [
+                "workbench.files.action.collapseExplorerFolders"
+            ]
+        }
+    ],
+    "vim.leader": "<space>",
+    "vim.handleKeys": {
+        "<C-a>": false,
+        "<C-f>": false,
+        "<C-k>": false,
+        "<C-j>": false,
+        "<C-y>": false
     },
-    {
-      "before": ["<C-h>"],
-      "commands": ["workbench.action.previousEditor"]
-    },
-    {
-      "before": ["<C-l>"],
-      "commands": ["workbench.action.nextEditor"]
-    },
-    // controls
-    {
-      "before": ["<leader>", "qq"],
-      "commands": ["workbench.action.closeAllGroups"]
-    },
-    {
-      "before": ["<leader>", "n"],
-      "commands": ["workbench.view.explorer"]
-    },
-    {
-      "before": ["<leader>", "s"],
-      "commands": ["workbench.action.toggleSidebarVisibility"]
-    },
-    {
-      "before": ["<leader>", "g"],
-      "commands": ["workbench.view.scm"]
-    },
-    {
-      "before": ["g", "d"],
-      "commands": ["editor.action.revealDefinition"]
-    },
-    {
-      "before": ["<C-q>"],
-      "commands": ["workbench.action.closeAllEditors"]
-    },
-    {
-      "before": ["<leader>", "c", "c"],
-      "commands": ["workbench.files.action.collapseExplorerFolders"]
-    }
-  ],
-  "vim.leader": "<space>",
-  "vim.handleKeys": {
-    "<C-a>": false,
-    "<C-f>": false,
-    "<C-k>": false,
-    "<C-j>": false,
-    "<C-y>": false
-  },
-  "workbench.iconTheme": "material-icon-theme",
-  "diffEditor.ignoreTrimWhitespace": false,
-  "editor.cursorBlinking": "phase",
-  "editor.cursorSmoothCaretAnimation": true,
-  "editor.smoothScrolling": true,
-  "zenMode.fullScreen": false,
-  "terminal.external.linuxExec": "/bin/bash",
-  "terminal.explorerKind": "external",
-  "editor.fontFamily": "'Hack', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
-  "dart.showInspectorNotificationsForWidgetErrors": false,
-  "tabnine.experimentalAutoImports": true,
-  "timeline.excludeSources": ["timeline.localHistory"],
-  "editor.unicodeHighlight.nonBasicASCII": false,
-  "editor.unicodeHighlight.invisibleCharacters": false,
-  "liveServer.settings.donotShowInfoMsg": true
+    "workbench.iconTheme": "material-icon-theme",
+    "diffEditor.ignoreTrimWhitespace": false,
+    "editor.cursorBlinking": "phase",
+    "editor.cursorSmoothCaretAnimation": true,
+    "editor.smoothScrolling": true,
+    "zenMode.fullScreen": false,
+    "terminal.external.linuxExec": "/bin/bash",
+    "terminal.explorerKind": "external",
+    "editor.fontFamily": "'Hack', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "dart.showInspectorNotificationsForWidgetErrors": false,
+    "editor.unicodeHighlight.nonBasicASCII": false,
+    "editor.unicodeHighlight.invisibleCharacters": false,
 }
